tests/valid/lifetime/outlives_where_return.facet
fn f<'a, 'b>(r: unrestricted &'a unrestricted isize) -> unrestricted &'b unrestricted isize where 'a: 'b {
    r
}
