tests/invalid/lifetime/outlives_missing_constraint.facet
fn bad<'a, 'b>(r: unrestricted &'a unrestricted isize) -> unrestricted &'b unrestricted isize {
    r
}
